sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1: error: not enough arguments for method bubbleSort: (l: Array[Int])Unit.
Unspecified value parameter l.
		bubbleSort();
                          ^AlgBubbleSort1:5: error: not found: value Echange
			if(l(i)>l(j)) Echange(i,j)
                                      ^