sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(l:Array[Int])  {
	for(i<-0 to l.length-2) {
		for(j<-i+1 to l.length-1) {
			if(l(i)>l(j)) Echange(i,j)
		}
	}
}
